[gd_scene load_steps=2 format=3 uid="uid://b0yt4nm08cf0m"]

[ext_resource type="Script" path="res://scenes/aoc1/BoxSpawner.gd" id="1_gd00j"]

[node name="BoxSpawner" type="Node2D"]
script = ExtResource("1_gd00j")
box_delay = 0.01

[node name="BoxSpawnPoint" type="Marker2D" parent="."]

[node name="box_delay_timer" type="Timer" parent="."]
one_shot = true

[node name="Boxes" type="Node2D" parent="."]

[connection signal="timeout" from="box_delay_timer" to="." method="_on_box_delay_timer_timeout"]
